add cursor movement by tip of index finger

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <video></video>
     <canvas></canvas>
-    <script type="module" src="/js/video-data.js"></script>
+    <div class="cursor"></div>
+    <!-- <script type="module" src="/js/video-data.js"></script> -->
+    <!-- <script type="module" src="/js/track-hand-motions.js"></script> -->
+    <script type="module" src="/js/move-cursor-by-finger.js"></script>
   </body>
 </html>
