add click by finger pinch

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   <body>
     <video></video>
     <canvas></canvas>
-    <div class="cursor"></div>
+    <!-- <div class="cursor"></div> -->
+    <div class="cursor2"></div>
+    <div class="counter-box">
+      <p>0</p>
+      <button>Click me by pinch</button>
+    </div>
     <!-- <script type="module" src="/js/video-data.js"></script> -->
     <!-- <script type="module" src="/js/track-hand-motions.js"></script> -->
-    <script type="module" src="/js/move-cursor-by-finger.js"></script>
+    <!-- <script type="module" src="/js/move-cursor-by-finger.js"></script> -->
+    <script type="module" src="/js/click-button-by-pinch.js"></script>
   </body>
 </html>
